--- a/Sem2FProject/Sem2FProject/Sem2FProject.csproj
+++ b/Sem2FProject/Sem2FProject/Sem2FProject.csproj
@@ -55,46 +55,50 @@
     <Compile Include="AllFlights.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllFlights.Designer.cs" />
+    <Compile Include="AllFlights.designer.cs">
+      <DependentUpon>AllFlights.cs</DependentUpon>
+    </Compile>
     <Compile Include="AllReservedSeats.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllReservedSeats.Designer.cs" />
+    <Compile Include="AllReservedSeats.designer.cs">
+      <DependentUpon>AllReservedSeats.cs</DependentUpon>
+    </Compile>
     <Compile Include="CancelFlight.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CancelFlight.Designer.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs" />
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="CancelFlight.designer.cs">
+      <DependentUpon>CancelFlight.cs</DependentUpon>
     </Compile>
     <Compile Include="NewFlight.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewFlight.Designer.cs" />
+    <Compile Include="NewFlight.Designer.cs">
+      <DependentUpon>NewFlight.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateFlight.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UpdateFlight.Designer.cs" />
+    <Compile Include="UpdateFlight.designer.cs">
+      <DependentUpon>UpdateFlight.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminProfile.resx">
       <DependentUpon>AdminProfile.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AllFlights.resx" />
-    <EmbeddedResource Include="AllReservedSeats.resx" />
-    <EmbeddedResource Include="CancelFlight.resx" />
-    <EmbeddedResource Include="Form1.resx" />
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="AllFlights.resx">
+      <DependentUpon>AllFlights.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewFlight.resx" />
+    <EmbeddedResource Include="AllReservedSeats.resx">
+      <DependentUpon>AllReservedSeats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CancelFlight.resx">
+      <DependentUpon>CancelFlight.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewFlight.resx">
+      <DependentUpon>NewFlight.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -105,7 +109,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UpdateFlight.resx" />
+    <EmbeddedResource Include="UpdateFlight.resx">
+      <DependentUpon>UpdateFlight.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
