--- a/Sem2FProject/Sem2FProject/Sem2FProject.csproj
+++ b/Sem2FProject/Sem2FProject/Sem2FProject.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
     <Compile Include="AdminHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +113,7 @@
     <Compile Include="Login.designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyWallet.cs" />
     <Compile Include="NewFlight.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +123,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="UpdateFlight.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +136,7 @@
     <Compile Include="UpdateFlightTicket.designer.cs">
       <DependentUpon>UpdateFlightTicket.cs</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <Compile Include="UserHome.cs">
       <SubType>Form</SubType>
     </Compile>
