--- a/Sem2FProject/Sem2FProject/Sem2FProject.csproj
+++ b/Sem2FProject/Sem2FProject/Sem2FProject.csproj
@@ -60,6 +60,9 @@
       <DependentUpon>AdminProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="Airline.cs" />
+    <Compile Include="AirlineData.cs" />
+    <Compile Include="Airport.cs" />
+    <Compile Include="AirportData.cs" />
     <Compile Include="AllFlights.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +111,12 @@
     <Compile Include="Form2.designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddAirport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAirport.Designer.cs">
+      <DependentUpon>AddAirport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +155,10 @@
     <Compile Include="UserHome.designer.cs">
       <DependentUpon>UserHome.cs</DependentUpon>
     </Compile>
+    <Compile Include="Validator.cs" />
+    <EmbeddedResource Include="AddAirport.resx">
+      <DependentUpon>AddAirport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminHome.resx">
       <DependentUpon>AdminHome.cs</DependentUpon>
     </EmbeddedResource>
