--- a/Sem2FProject/Sem2FProject/Sem2FProject.csproj
+++ b/Sem2FProject/Sem2FProject/Sem2FProject.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFlight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFlight.Designer.cs">
+      <DependentUpon>AddFlight.cs</DependentUpon>
+    </Compile>
     <Compile Include="Admin.cs" />
     <Compile Include="AdminHome.cs">
       <SubType>Form</SubType>
@@ -128,11 +134,11 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="MyWallet.cs" />
-    <Compile Include="NewFlight.cs">
+    <Compile Include="AddAirline.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewFlight.Designer.cs">
-      <DependentUpon>NewFlight.cs</DependentUpon>
+    <Compile Include="AddAirline.Designer.cs">
+      <DependentUpon>AddAirline.cs</DependentUpon>
     </Compile>
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
@@ -161,6 +167,9 @@
     </Compile>
     <EmbeddedResource Include="AddAirport.resx">
       <DependentUpon>AddAirport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddFlight.resx">
+      <DependentUpon>AddFlight.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AdminHome.resx">
       <DependentUpon>AdminHome.cs</DependentUpon>
@@ -195,8 +204,8 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewFlight.resx">
-      <DependentUpon>NewFlight.cs</DependentUpon>
+    <EmbeddedResource Include="AddAirline.resx">
+      <DependentUpon>AddAirline.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
