--- a/Sem2FProject/Sem2FProject/Sem2FProject.csproj
+++ b/Sem2FProject/Sem2FProject/Sem2FProject.csproj
@@ -154,36 +154,6 @@
     <Compile Include="Classes\AirlineData.cs" />
     <Compile Include="Classes\Airport.cs" />
     <Compile Include="Classes\AirportData.cs" />
-    <Compile Include="Forms\AllReservedSeats.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\AllReservedSeats.designer.cs">
-      <DependentUpon>AllReservedSeats.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\BookFlight.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\BookFlight.designer.cs">
-      <DependentUpon>BookFlight.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\CancelFlight.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\CancelFlight.designer.cs">
-      <DependentUpon>CancelFlight.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\CancelFlightTicket.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\CancelFlightTicket.designer.cs">
-      <DependentUpon>CancelFlightTicket.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\DeleteUser.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\DeleteUser.Designer.cs">
-      <DependentUpon>DeleteUser.cs</DependentUpon>
-    </Compile>
     <Compile Include="Classes\Email.cs" />
     <Compile Include="Classes\Flight.cs" />
     <Compile Include="Classes\FlightData.cs" />
@@ -217,32 +187,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Ticket.cs" />
     <Compile Include="Classes\Transaction.cs" />
-    <Compile Include="Forms\UpdateFlightTicket.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\UpdateFlightTicket.designer.cs">
-      <DependentUpon>UpdateFlightTicket.cs</DependentUpon>
-    </Compile>
     <Compile Include="Classes\User.cs" />
     <Compile Include="Classes\UserData.cs" />
-    <Compile Include="Forms\UserHome.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\UserHome.designer.cs">
-      <DependentUpon>UserHome.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Forms\AllReservedSeats.resx">
-      <DependentUpon>AllReservedSeats.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\BookFlight.resx">
-      <DependentUpon>BookFlight.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CancelFlight.resx">
-      <DependentUpon>CancelFlight.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\CancelFlightTicket.resx">
-      <DependentUpon>CancelFlightTicket.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin HomeScreen.resx">
       <DependentUpon>Admin HomeScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -257,12 +203,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\UpdateFlightTicket.resx">
-      <DependentUpon>UpdateFlightTicket.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\UserHome.resx">
-      <DependentUpon>UserHome.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="..\.editorconfig">
       <Link>.editorconfig</Link>
@@ -305,9 +245,6 @@
     <Content Include="Resources\plane-841441_19201.jpg" />
     <None Include="Resources\plane-841441_192011.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\" />
-    <Folder Include="U\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
